3.5 Merged (New AppLauncher, API jdk 9, JAXB issue, Scripts for new installers)