@@ -4,18 +4,18 @@
 	<parent>
 		<artifactId>weasis-core-parent</artifactId>
 		<groupId>org.weasis.core</groupId>
-		<version>3.1.0-SNAPSHOT</version>
+		<version>3.5.0-SNAPSHOT</version>
 		<relativePath>../weasis-core-parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>weasis-core-ui</artifactId>
 	<packaging>bundle</packaging>
 	<name>Weasis UI API (j2se) [${project.artifactId}]</name>
-	
+
 	<properties>
 		<bundle.namespace>org.weasis.core.ui</bundle.namespace>
 	</properties>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -23,8 +23,12 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<configuration>
 					<instructions>
-						<!-- Force to import jaxb binding classes -->
-						<Import-Package>com.sun.xml.internal.bind,*</Import-Package>
+						<!-- Force to import jaxb binding classes (supports jaxb inside or outside jdk) -->
+						<Import-Package>com.sun.xml.internal.bind;resolution:=optional,
+							javax.xml.bind;version=!,
+							javax.xml.bind.annotation;version=!,
+							javax.xml.bind.annotation.adapters;version=!,
+							com.sun.xml.bind.v2;resolution:=optional,*</Import-Package>
 						<Bundle-Activator>${bundle.namespace}.internal.Activator</Bundle-Activator>
 						<!-- add for Xchart: ,org.knowm.xchart.*,org.knowm.xchart.style.*,org.knowm.xchart.style.colors.*,org.knowm.xchart.style.lines.*,org.knowm.xchart.style.markers.*,de.erichseifert.* -->
 						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*,it.cnr.imaa.*,org.jdesktop.jxlayer.*,com.github.lgooddatepicker.*,com.privatejgoodies.*,org.knowm.xchart.*,org.knowm.xchart.style.*,org.knowm.xchart.style.colors.*,org.knowm.xchart.style.lines.*,org.knowm.xchart.style.markers.*,de.erichseifert.*</Export-Package>
@@ -36,32 +40,16 @@
 		</plugins>
 	</build>
 
-	<profiles>
-		<profile>
-			<id>java9</id>
-			<activation>
-				<jdk>[9,)</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>--add-modules=java.xml.bind</argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.weasis.core</groupId>
 			<artifactId>weasis-core-api</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.weasis.thirdparty</groupId>
+			<artifactId>jaxb-osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.weasis.thirdparty</groupId>
