@@ -1,11 +1,14 @@
 #!/bin/bash
 # This script attempts to find an existing installation of Java that meets a minimum version
-# requirement on a Linux machine.  If it is successful, it will export a JAVA_HOME environment
-# variable that can be used by another calling script.
+# requirement on a Linux machine.
 #
+# Initial script by Nicolas Roduit
 # Rewritten by Abel 'Akronix' Serrano Juste <akronix5@gmail.com>
 
-# Specify the required JDK version.
+# Set custom Java Runtime path
+#export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+
+# Specify the required Java version.
 # Only major version is checked. Minor version or any other version string info is left out.
 REQUIRED_TEXT_VERSION=1.8
 
@@ -13,7 +16,7 @@ REQUIRED_TEXT_VERSION=1.8
 DEFAULT_JVM_OPTIONS="-Xms64m -Xmx768m -Dgosh.args="
 GOSH_ARGS="-sc telnetd -p 17179 start"
 
-JAVA9_OPTIONS="--add-modules java.xml.bind --add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.desktop/javax.imageio.stream=ALL-UNNAMED --add-opens=java.desktop/javax.imageio=ALL-UNNAMED --add-opens=java.desktop/com.sun.awt=ALL-UNNAMED"
+JAVA9_OPTIONS="--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.desktop/javax.imageio.stream=ALL-UNNAMED --add-opens=java.desktop/javax.imageio=ALL-UNNAMED --add-opens=java.desktop/com.sun.awt=ALL-UNNAMED"
 
 # Extract major version number for comparisons from the required version string.
 # In order to do that, remove leading "1." if exists, and minor and security versions.
@@ -21,13 +24,22 @@ REQUIRED_MAJOR_VERSION=$(echo $REQUIRED_TEXT_VERSION | sed -e 's/^1\.//' -e 's/\
 
 # Aux functions:
 die ( ) {
+    command -v notify-send >/dev/null 2>&1 && { notify-send "Weasis Launcher" "$*"; }
 	echo
 	echo -e "ERROR: $*"
 	exit 1
 }
 
+# Resolve path of Resources and JRE
+curPath=$(dirname "$(readlink -f "$0")")
+
+# If embeded Java Runtime exists, prefer its use.
+if [ -x "$curPath/runtime/bin/java" ] ; then
+    JAVACMD="$curPath/runtime/bin/java"
+elif [ -x "$curPath/jre/linux/bin/java" ] ; then
+    JAVACMD="$curPath/jre/linux/bin/java"
 # First, determine the Java command to use to start the JVM.
-if [ -n "$JAVA_HOME" ] ; then
+elif [ -n "$JAVA_HOME" ] ; then
 	if [ -x "$JAVA_HOME/jre/sh/java" ] ; then
 		# IBM's JDK on AIX uses strange locations for the executables
 		JAVACMD="$JAVA_HOME/jre/sh/java"
@@ -48,7 +60,8 @@ fi
 
 # Then, get the installed version
 INSTALLED_VERSION=$($JAVACMD -version 2>&1 | awk '/version [0-9]*/ {print $3;}')
-echo "Found java $INSTALLED_VERSION"
+echo "Found java version $INSTALLED_VERSION"
+echo "Java command path: $JAVACMD"
 
 # Remove double quotes, remove leading "1." if it exists and remove everything apart from the major version number.
 INSTALLED_MAJOR_VERSION=$(echo $INSTALLED_VERSION | sed -e 's/"//g' -e 's/^1\.//' -e 's/\..*//')
@@ -60,7 +73,7 @@ fi
 
 if (( INSTALLED_MAJOR_VERSION >= 9 ))
 then
-	echo "add options for Java 9: $JAVA9_OPTIONS"
+	echo "Additional options for Java 9: $JAVA9_OPTIONS"
     DEFAULT_JVM_OPTIONS="$JAVA9_OPTIONS $DEFAULT_JVM_OPTIONS"
 fi
 
@@ -68,17 +81,15 @@ fi
 userParameters=()
 for var in "$@"
 do
-if [[ $var == \$* ]]
+if [[ $var == \$* || $var == "weasis://"* ]]
 then
   userParameters+=("$var")
 fi
 done
-echo user arguments: ${userParameters[@]}
 
-# If the correct Java version is detected, launch weasis from current path
-curPath=$(dirname "$(readlink -f "$0")")
+echo "Additional user arguments: ${userParameters[@]}"
 echo "Weasis launcher directory: $curPath"
 
 cps="$curPath/weasis/weasis-launcher.jar:$curPath/weasis/felix.jar:$curPath/weasis/substance.jar"
-
+# Launch
 $JAVACMD $DEFAULT_JVM_OPTIONS"$GOSH_ARGS" -Dweasis.portable.dir="$curPath" -classpath "$cps" org.weasis.launcher.WeasisLauncher \$dicom:get --portable ${userParameters[@]}
